---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-??-??
  Fixes:
    - Higher res icons the fix blur (needed after Factorio update 2.0.18 increased the button sizes).
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-11-12
  Features:
    - Build positions are tested if a default_cover_tile applies. If so, the tile is planned as well. This means landfill on water, foundation on lava, and ice-platform on ammonia.
    - Build positions are tested if they're meltable. If so, "concrete" is planned as well. ("concrete" is currently hardcoded, and might not work well together with some serious overhaul mods.)
  Fixes:
    - Undo now also includes the (planned) deconstructed entities. 
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-31
  Features:
    - Added drop-down to select in which quality to build the pumps, pipes and power-poles. 
    - Planning of power-poles takes the increased ranges of higher-quality power poles into account.
    - Russian localisation file updated; kindly provided by https://github.com/Astorin     
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-11
  Features:
    - Target Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-08
  Features:
    - Target Factorio 1.2 (which will be 2.0 soon)
    - Update to Factorio API changes for 2.0 and Space Age
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2024-02-04
  Changes:
    - Take the actual player force into account, instead of using the default force "player".