@@ -39,6 +39,12 @@ exclude-option-tooltip=Manual placement
 choose-extractor-generic=Select which buildings should be placed.
 choose-extractor-unknown-selection=Select which buildings should be placed.
 choose-extractor-changed-options=The building options available to you have changed since last you used P.U.M.P.. You may want to adjust your pick? 
+pipe-bury-label=Bury stretches of pipes:
+pipe-bury-tooltip=How long a straight section of pipe needs to be before it's converted to an underground pipe:
+pipe-bury-no-minimum=No minimum
+pipe-bury-short=Short
+pipe-bury-long=Long
+pipe-bury-skip=Don't bury pipes
 
 [controls]
 pump-selection-tool-toggle=Toggle P.U.M.P. selection tool
